introduce media query

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/utilities.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 <body>
     <header class="flex jc-sb ai-cen">
@@ -15,8 +16,8 @@
     </header>
     <main>
         <section>
-            <div class="container">
-                <div class="debug bg-cs1 mt-75 c-gry flex clmn jc-cen ai-fs  ">
+            <div class="container flex clmn jc-cen ai-cen">
+                <div class="debug bg-cs1 mt-75 c-gry flex clmn jc-cen ai-fs a1 ">
                     <h3>Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro veniam, maiores doloribus adipisci aut, fugiat, recusandae consequuntur tenetur earum necessitatibus tempora accusamus natus sunt consequatur perspiciatis architecto omnis cupiditate quis!
                    </p>
@@ -26,25 +27,25 @@
                     <img class="w100" src="./img/phone.png" alt="">
                 </div>
 
-                <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen">
+                <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen a2">
                    <div><i class="fa-solid fa-file-code fa-3x" style="color: #ffffff;"></i></div>
                     <h3>Clean code</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil reiciendis quaerat, iste expedita voluptate asperiores soluta fugiat, repellendus inventore voluptatum eligendi dolor hic temporibus perspiciatis architecto dolorum voluptates ipsa laboriosam.</p>
                 </div>
 
-                <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen">
+                <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen a3">
                     <div><i class="fa-solid fa-compass-drafting fa-3x" style="color: #ffffff;"></i></div>
                      <h3>Clean code</h3>
                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil reiciendis quaerat, iste expedita voluptate asperiores soluta fugiat, repellendus inventore voluptatum eligendi dolor hic temporibus perspiciatis architecto dolorum voluptates ipsa laboriosam.</p>
                  </div>
 
-                 <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen">
+                 <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen a4">
                     <div><i class="fa-solid fa-laptop-code fa-3x" style="color: #ffffff;"></i></div>
                      <h3>Clean code</h3>
                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil reiciendis quaerat, iste expedita voluptate asperiores soluta fugiat, repellendus inventore voluptatum eligendi dolor hic temporibus perspiciatis architecto dolorum voluptates ipsa laboriosam.</p>
                  </div>
 
-                 <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen">
+                 <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen a5">
                     <div><i class="fa-solid fa-bullhorn fa-3x" style="color: #ffffff;"></i></div>
                      <h3>Clean code</h3>
                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil reiciendis quaerat, iste expedita voluptate asperiores soluta fugiat, repellendus inventore voluptatum eligendi dolor hic temporibus perspiciatis architecto dolorum voluptates ipsa laboriosam.</p>
@@ -91,9 +92,72 @@
                     <p class="mt-30 txt-cen"><span class="fs-20">"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ad.<span class="fs-20">"</span></p>
                     <h3 class="mt-30 mb-30">Nate Reynolds</h3>
                 </div>
-                    
             </div>    
         </section>
+        <!-- fine testimonials -->
+
+        <!-- inizio benefits -->
+        <section class="mt-30 bg-cs2">
+            <div class="container flex clmn jc-cen ai-cen">
+                <div class="debug bg-wht w100 mt-30"></div>
+            </div>
+
+            <div class="container flex clmn jc-cen ai-cen">
+                <div class="debug bg-wht w100 mt-30"></div>
+            </div>
+
+            <div class="container flex clmn jc-cen ai-cen">
+                <div class="debug bg-wht w100 mt-30"></div>
+            </div>
+
+            <div class="container flex clmn jc-cen ai-cen">
+                <div class="debug bg-wht w100 mt-30"></div>
+            </div>
+
+            <div class="container flex clmn jc-cen ai-cen">
+                <div class="debug bg-wht w100 mt-30"></div>
+            </div>
+
+            <div class="container flex clmn jc-cen ai-cen">
+                <div class="debug bg-wht w100 mt-30 mb-30"></div>
+            </div>
+        </section>
+       <!-- fine benefits -->
+
+       <!-- inizio about us -->
+       <section class="mt-75">
+        <div class="container flex clmn jc-cen ai cen">
+            <h2>Lorem ipsum dolor sit.</h2>
+            <p class="mt-30">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti possimus minima fuga exercitationem aliquam cumque perferendis eligendi quasi id. Pariatur dignissimos voluptates deserunt veniam nobis odit expedita rem nisi!</p>
+
+            <p class="mt-30">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi officia a architecto voluptate voluptas ex, dolor repellendus itaque asperiores. Sequi illum minus quod at enim qui, sapiente praesentium illo inventore.</p>
+
+            <img class="img-rnd w60 mt-30" src="./img/about.jpg" alt="">
+            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex est reprehenderit distinctio.</h3>
+            <span class="btn"><a class="txt-n" href="http://" target="_blank" rel="noopener noreferrer"> find me on linkedin</a></span>
+        </div>
+       </section>
+       <!-- fine about us -->
+
+       <!-- inizio get started -->
+       <section class="bg-cs2 mt-75">
+        <div class="container flex clmn jc-cen ai-cen">
+            <h3>Lorem, ipsum.</h3>
+            <h2>Lorem ipsum dolor sit.</h2>
+            <h1>it's free</h1>
+            <p class="txt-cen">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos provident aut quod.</p>
+            <div class="btn">get started </div>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+        </div>
+       </section>
+       <!-- fine get started -->
     </main>
+    <footer class="bg-blk ">
+        <div class="container flex clmn jc-cen ai-cen c-wht">
+            <span class="pt-24">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nulla. bla bla bla bla bla Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+            <span class="pt-24">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+        </div>
+    
+    </footer>
 </body>
 </html>
