--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </header>
     <main>
         <section>
-            <div class="container flex clmn jc-cen ai-cen">
-                <div class="debug bg-cs1 mt-75 c-gry flex clmn jc-cen ai-fs a1 ">
+            <div class="container cards-c">
+                <div class="bg-cs1 mt-75 c-gry big-card">
                     <h3>Lorem ipsum dolor sit amet.</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro veniam, maiores doloribus adipisci aut, fugiat, recusandae consequuntur tenetur earum necessitatibus tempora accusamus natus sunt consequatur perspiciatis architecto omnis cupiditate quis!
                    </p>
@@ -27,25 +27,25 @@
                     <img class="w100" src="./img/phone.png" alt="">
                 </div>
 
-                <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen a2">
+                <div class=" bg-cs1 mt-75 c-gry flex clmn jc-cen ai-cen card">
                    <div><i class="fa-solid fa-file-code fa-3x" style="color: #ffffff;"></i></div>
                     <h3>Clean code</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil reiciendis quaerat, iste expedita voluptate asperiores soluta fugiat, repellendus inventore voluptatum eligendi dolor hic temporibus perspiciatis architecto dolorum voluptates ipsa laboriosam.</p>
                 </div>
 
-                <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen a3">
+                <div class=" bg-cs1 mt-30 c-gry flex clmn jc-cen ai-cen card">
                     <div><i class="fa-solid fa-compass-drafting fa-3x" style="color: #ffffff;"></i></div>
                      <h3>Clean code</h3>
                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil reiciendis quaerat, iste expedita voluptate asperiores soluta fugiat, repellendus inventore voluptatum eligendi dolor hic temporibus perspiciatis architecto dolorum voluptates ipsa laboriosam.</p>
                  </div>
 
-                 <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen a4">
+                 <div class="bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen card">
                     <div><i class="fa-solid fa-laptop-code fa-3x" style="color: #ffffff;"></i></div>
                      <h3>Clean code</h3>
                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil reiciendis quaerat, iste expedita voluptate asperiores soluta fugiat, repellendus inventore voluptatum eligendi dolor hic temporibus perspiciatis architecto dolorum voluptates ipsa laboriosam.</p>
                  </div>
 
-                 <div class="debug bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen a5">
+                 <div class="bg-cs1 mt-30 c-gry flex clmn jc-fs ai-cen card">
                     <div><i class="fa-solid fa-bullhorn fa-3x" style="color: #ffffff;"></i></div>
                      <h3>Clean code</h3>
                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil reiciendis quaerat, iste expedita voluptate asperiores soluta fugiat, repellendus inventore voluptatum eligendi dolor hic temporibus perspiciatis architecto dolorum voluptates ipsa laboriosam.</p>
@@ -55,14 +55,16 @@
         <!-- inizio planning  -->
         <section>
             <div class="bg-cs2 mt-75 ">
-                <div class="container flex clmn jc-cen ai-cen">
-                    <div><img class="w100" src="./img/planning1.png" alt=""></div>
-                    <h2 class="mt-30"> Lorem, ipsum .</h2>
-                    <p class="mt-30">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima similique ea eveniet quasi nostrum nulla dignissimos dolore quaerat nemo itaque. Veniam ullam sint hic qui quidem aspernatur, quas earum ex!</p>
-                    <div class="w100 mt-30 mb-30 pb-12 bg-wht flex clmn jc-cen ai-cen">
+                <div class="plans container flex clmn jc-cen ai-cen">
+                    <div class="plan mt-30 mb-30 pb-12 flex clmn jc-cen ai-cen">
+                        <img class="w100" src="./img/planning1.png" alt="">
+                        <h2 class="mt-30"> Lorem, ipsum .</h2>
+                        <p class="mt-30">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima similique ea eveniet quasi nostrum nulla dignissimos dolore quaerat nemo itaque. Veniam ullam sint hic qui.</p>
+                    </div>
+                    <div class=" plan mt-30 mb-30 pb-12 bg-wht flex clmn jc-cen ai-cen">
                         <img class="w100" src="./img/planning2.png" alt="">
-                        <div class="txt-cen">Lorem, ipsum.</div>
-                        <div></div><p class="txt-cen">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam labore quaerat repellat!</p></div>  
+                        <h2>Lorem, ipsum.</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam labore quaerat repellat! Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, qui.</p>
                     </div>
                 </div>
             </div>
@@ -72,25 +74,31 @@
         <!-- inizio testimonials --> 
         <section class="mt-30">
             <div class="container flex clmn jc-cen ai-cen">
-                <h3>TESTIMONIALS</h3>
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p class="txt-cen">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsum molestias delectus non repellat autem, dolores dicta odio. Sequi molestiae vero voluptate consequuntur natus. Quos neque nisi laudantium perspiciatis esse?</p>
-                <div class="bg-cs2 flex clmn jc-cen ai-cen mt-30">
-                    <img class="w80 img-rnd mt-30" src="./img/testimonial1.jpg" alt="">
-                    <p class="mt-30 txt-cen"><span class="fs-20">"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ad.<span class="fs-20">"</span></p>
-                    <h3 class="mt-30 mb-30">Nate Reynolds</h3>
+                <h3 class="p-16">TESTIMONIALS</h3>
+                <h2 class="p-16">Lorem ipsum dolor sit amet.</h2>
+                <p class="txt-cen p-16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsum molestias delectus non repellat autem, dolores dicta odio. Sequi molestiae vero voluptate consequuntur natus. Quos neque nisi laudantium perspiciatis esse?</p>
+                <div class="testimonial bg-cs2 flex clmn jc-cen ai-cen mt-30">
+                    <div class="test1"><img class="w100 img-rnd"  src="./img/testimonial1.jpg" alt=""></div>
+                    <div class="test2">
+                        <p class=" txt-cen"><span class="fs-20">"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ad.<span class="fs-20">"</span></p>
+                        <h3 class=" txt-cen">Nate Reynolds</h3>
+                    </div>
                 </div>
                             
-                <div class="bg-cs2 flex clmn jc-cen ai-cen mt-30">
-                    <img class="w80 img-rnd mt-30" src="./img/testimonial1.jpg" alt="">
-                    <p class="mt-30 txt-cen"><span class="fs-20">"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ad.<span class="fs-20">"</span></p>
-                    <h3 class="mt-30 mb-30">Nate Reynolds</h3>
+                <div class="testimonial bg-cs2 flex clmn jc-cen ai-cen mt-30">
+                    <div class="test1"><img class="w100 img-rnd" src="./img/testimonial2.jpg" alt=""></div>
+                    <div class="test2">
+                        <p class=" txt-cen"><span class="fs-20">"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ad.<span class="fs-20">"</span></p>
+                        <h3 class=" txt-cen ">Nate Reynolds</h3>
+                    </div>          
                 </div>    
 
-                <div class="bg-cs2 flex clmn jc-cen ai-cen mt-30">
-                    <img class="w80 img-rnd mt-30" src="./img/testimonial1.jpg" alt="">
-                    <p class="mt-30 txt-cen"><span class="fs-20">"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ad.<span class="fs-20">"</span></p>
-                    <h3 class="mt-30 mb-30">Nate Reynolds</h3>
+                <div class="testimonial bg-cs2 flex clmn jc-cen ai-cen mt-30">
+                    <div class="test1"><img class="w100 img-rnd " src="./img/testimonial3.jpg" alt=""></div>
+                    <div class="test2">
+                        <p class=" txt-cen"><span class="fs-20">"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ad.<span class="fs-20">"</span></p>
+                        <h3 class=" txt-cen ">Nate Reynolds</h3>
+                    </div>          
                 </div>
             </div>    
         </section>
